Fundamental module and author service added.

--- a/AngularCourse/src/app/app.component.html
+++ b/AngularCourse/src/app/app.component.html
@@ -317,6 +317,8 @@
 
 <div class="content" role="main">
 
+  <fundamentals-list-of-authors></fundamentals-list-of-authors>
+
   <!-- Highlight Card -->
   <div class="card highlight-card card-small">
 
