Implementing and testing bindings component on app.

--- a/AngularCourse/src/app/app.component.html
+++ b/AngularCourse/src/app/app.component.html
@@ -318,6 +318,7 @@
 <div class="content" role="main">
 
   <fundamentals-list-of-authors></fundamentals-list-of-authors>
+  <handling-events-bindings></handling-events-bindings>
 
   <!-- Highlight Card -->
   <div class="card highlight-card card-small">
