--- a/AngularCourse/src/app/app.component.html
+++ b/AngularCourse/src/app/app.component.html
@@ -319,6 +319,7 @@
 
   <fundamentals-list-of-authors></fundamentals-list-of-authors>
   <handling-events-bindings></handling-events-bindings>
+  <handling-events-pipe></handling-events-pipe>
 
   <!-- Highlight Card -->
   <div class="card highlight-card card-small">
