--- a/AngularCourse/src/app/handling-events/bindings/bindings.component.html
+++ b/AngularCourse/src/app/handling-events/bindings/bindings.component.html
@@ -49,7 +49,7 @@
 {{ course.subtitle | lowercase }} <br />
 {{ course.students | number }} <br />
 {{ course.rating | number:'2.1-1' }} <br />
-{{ course.price | currency:'CAD':false:'3.2-2' }} <br />
+{{ course.price | currency:'CAD':'code':'3.2-2' }} <br />
 {{ course.releaseDate | date:'dd/MM/yyyy - EEEE' }} <br />
 
 <br>
